signup and footer update

--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,7 @@
     </script>
 
     <link rel="stylesheet" href="%PUBLIC_URL%/static/reactDates.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/static/style.css" />
   </head>
   <body>
     <div id="root"><!--!body--></div>
