--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <!--!title-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="twitter:image" content="/static/FacebookImage.png">
+    <meta name="og:type" content="website">
+  <!-- <meta property="og:title" content="WeBorrow"> -->
+  <meta property="og:image" content="/static/FacebookImage.png">
     <!--!meta-->
 
     <!--!googleAnalyticsScript-->
