domain verification meta tag added

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="twitter:image" content="/static/FacebookImage.png">
     <meta name="og:type" content="website">
+
+    <meta name="google-site-verification" content="oXDcOaBbYm1N1VKGqyT0r9f70Iqs5lrjB0vvZFxToNk" />
   <!-- <meta property="og:title" content="WeBorrow"> -->
   <meta property="og:image" content="/static/FacebookImage.png">
     <!--!meta-->
