--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,7 @@
         }
       })(document);
     </script>
+     <script src="https://apis.google.com/js/api.js" type="text/javascript"></script>
 
     <link rel="stylesheet" href="%PUBLIC_URL%/static/reactDates.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/static/style.css" />
